--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
-
 <body>
-  <header>
+ <header>
     <div class="container">
       <div class="header-item">
         <div class="row">
@@ -48,13 +48,13 @@
       </div>
     </div>
     <div class="container">
-      <nav class="navbar navbar-expand-sm bg-light ">
+      <nav class="navbar navbar-expand-lg bg-light ">
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
           data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
+        <div class="collapse navbar-collapse nav-menu" id="collapsibleNavId">
           <ul class="navbar-nav me-auto mt-2 mt-lg-0">
             <li class="nav-item">
               <a class="nav-link active" href="#" aria-current="page">Home <span
@@ -77,62 +77,64 @@
                   class="visually-hidden">(current)</span></a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <form class="d-flex " role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           </form>
           <ul class="d-flex man-icon">
-            <li class="ms-5">
+            <li class="ms-5 sm-ms-0">
               <a href="#"> <i class="fa-regular fa-user"></i></a>
             </li>
-            <li><a href="#"><i class="fa-solid fa-bars"></i></a></li>
+            <li class="me-5"><a href="#"><i class="fa-solid fa-bars"></i></a></li>
           </ul>
         </div>
       </nav>
     </div>
-  </header>
-  <section id="banner">
+  </header> 
+<section id="banner">
     <div class="banner-main">
       <div class="banner-inner">
         <div class="banner-text text-center">
           <p>welcome to our it company</p>
           <h1>IT Consult Service <br>
             For Business.</h1>
-          <div class="banner-btn d-flex justify-content-center">
-            <div class="btn-one me-4">
+      <div class="banner-btn d-flex justify-content-center">
+             <div class="btn-one me-4">
               <button type="button" class="btn btn-primary  ">Get Apointment</button>
             </div>
             <button type="button" class="btn btn-primary ">Learn More</button>
-          </div>
         </div>
       </div>
-      <!-- <div class="banner-inner">
-        <div class="banner-text text-center">
-          <p>welcome to our it company</p>
-          <h1>IT Consult Service <br>
-            For Business.</h1>
-          <div class="banner-btn d-flex justify-content-center">
-            <div class="btn-one me-4">
-              <button type="button" class="btn btn-primary  ">Get Apointment</button>
-            </div>
-            <button type="button" class="btn btn-primary ">Learn More</button>
-          </div>
-        </div>
-      </div> -->
-      <!-- <div class="banner-inner">
-        <div class="banner-text text-center">
-          <p>welcome to our it company</p>
-          <h1>IT Consult Service <br>
-            For Business.</h1>
-          <div class="banner-btn d-flex justify-content-center">
-            <div class="btn-one me-4">
-              <button type="button" class="btn btn-primary  ">Get Apointment</button>
-            </div>
-            <button type="button" class="btn btn-primary ">Learn More</button>
-          </div>
-        </div>
-      </div> -->
+      </div>
     </div>
-  </section>
+    
+   <!-- <div class="banner-inner">
+        <div class="banner-text text-center">
+          <p>welcome to our it company</p>
+          <h1>IT Consult Service <br>
+            For Business.</h1>
+       <div class="banner-btn d-flex justify-content-center">
+       <div class="btn-one me-4">
+              <button type="button" class="btn btn-primary  ">Get Apointment</button>
+            </div>
+            <button type="button" class="btn btn-primary ">Learn More</button>
+          </div>
+        </div>
+      </div>   
+      <div class="banner-inner">
+        <div class="banner-text text-center">
+          <p>welcome to our it company</p>
+          <h1>IT Consult Service <br>
+            For Business.</h1> -->
+<!-- <div class="banner-btn d-flex justify-content-center"> 
+          <div class="btn-one me-4">
+              <button type="button" class="btn btn-primary  ">Get Apointment</button>
+            </div>
+            <button type="button" class="btn btn-primary ">Learn More</button>
+          </div>
+      </div>
+      </div>  -->
+    
+  </section> 
 
   <section id="about">
     <div class="container">
@@ -231,12 +233,14 @@
     <div class="background-color">
       <div class="bg-up">
         <div class="container">
+          <div class="bg-logo">
           <img src="assets/images/logo-one.png" alt="">
           <img src="assets/images/logo-two.png" alt="">
           <img src="assets/images/logo-three.png" alt="">
           <img src="assets/images/logo-four.png" alt="">
           <img src="assets/images/logo-five.png" alt="">
         </div>
+      </div>
       </div>
     </div>
   </section>
